Fix scrollbar hiding (#122)

--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -11,3 +11,7 @@ html {
 html::-webkit-scrollbar {
   display: none;
 }
+
+* {
+  scrollbar-width: inherit;
+}
